--- a/css/store.css
+++ b/css/store.css
@@ -298,9 +298,16 @@ button {
     height: 22px;
     font-size: 22px;
 }
-/* .search-btn .fas {
-    font-weight: 400;
-} */
+.count-box .text {
+    font-size: 20px;
+    margin-left: 7px;
+    height: 20px;
+    width: 71.6094;
+}
+.info-search-box .dummy-line {
+    height: 10px;
+    background-color: #f6f6f6;
+}
 .info-store-box {
     height: calc(100% - 402px);
     -webkit-box-sizing: border-box;
