--- a/css/store.css
+++ b/css/store.css
@@ -35,6 +35,7 @@ h2 {
 }
 .top h2 {
     padding-top: 110px;
+    font-size: 26px;
 }
 .center {
     width: 95%;
@@ -135,6 +136,11 @@ ul {
     padding: 0 30px;
     padding-top: 20px;
 }
+.info-search-box .count-box {
+    margin-bottom: 20px;
+    display: flex;
+    align-items: center;
+}
 .info-tit {
     margin-top: 40px;
     font-size: 28px;
@@ -155,20 +161,6 @@ ul {
 .bgbox {
     width: 200px;
     height: 120px;
-}
-.store-section .info-wrap .store-list li .inner .textbox .tit {
-    margin-bottom: 20px;
-    font-size: 22px;
-    -ms-flex-item-align: start;
-    align-self: flex-start;
-    width: 100%;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    padding-right: 15px;
-    text-align: left;
 }
 .store-list li:not(:nth-last-of-type(1)) {
     border-bottom: 1px solid #d2d2d2;
@@ -193,7 +185,6 @@ ul {
     align-self: flex-start;
     width: 100%;
     white-space: nowrap;
-    overflow: hidden;
     text-overflow: ellipsis;
     box-sizing: border-box;
     padding-right: 15px;
@@ -213,12 +204,50 @@ ul {
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+    font-size: 18px;
 }
 .store-list li .inner .textbox .text .left {
     padding-right: 7px;
     box-sizing: border-box;
     font-size: 18px;
     font-weight: 500;
+}
+.store-list li .inner .textbox .text .right::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 10%;
+    display: block;
+    width: 1px;
+    height: 80%;
+    background-color: #bfbfbf;
+}
+.store-list li .inner .arrow-close {
+    position: absolute;
+    right: 0;
+    top: 0;
+    display: block;
+    width: 20px;
+    height: 20px;
+    transition: transform 0.3s;
+}
+.store-list li .inner .arrow-close span {
+    display: block;
+    width: 18px;
+    height: 2px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    background-color: #2d2d2d;
+}
+.store-list li .inner .arrow-close span.line1 {
+    transform: translate(-50%, -50%);
+}
+.store-list li .inner .arrow-close span.line2 {
+    transform: translate(-50%, -50%) rotate(-90deg);
+}
+.store-list li .inner:hover .arrow-close {
+    transform: rotate(180deg);
 }
 h1,
 h2,
@@ -241,6 +270,9 @@ h6 {
     display: block;
     width: fit-content;
     cursor: pointer;
+}
+.btn-cate:checked .textbox {
+    background-color: #1c1c1c;
 }
 .btn-cate:hover .textbox {
     background-color: #1c1c1c;
@@ -339,12 +371,17 @@ button {
 .info-search-box .dummy-line {
     height: 10px;
     background-color: #f6f6f6;
+    transform: scaleX(1.2);
 }
 .info-store-box {
     height: calc(100% - 402px);
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
     padding: 0 30px;
+    overflow-y: auto;
+}
+.info-store-box::-webkit-scrollbar {
+    display: none;
 }
 .inner .textbox {
     display: flex;
@@ -355,6 +392,10 @@ button {
 }
 .fa-restroom:before {
     content: "\f7bd";
+}
+.deco-backline {
+    position: relative;
+    bottom: 8px;
 }
 .deco-backline::before {
     content: "";
@@ -372,7 +413,7 @@ button {
     opacity: 0.3;
 }
 
-/* --------------오시는 길-------------- */
+/* --------------오시는 길 시작-------------- */
 .topbox {
     display: flex;
     align-items: center;
@@ -418,8 +459,9 @@ button {
     font-size: 30px;
     letter-spacing: -0.025em;
     margin-bottom: 8px;
+    font-weight: 600;
 }
-p {
+.location-wrap .cont-wrap p {
     font-size: 18px;
     letter-spacing: -0.025em;
     line-height: 1.3;
@@ -444,41 +486,11 @@ a {
     outline: none;
     color: inherit;
 }
-.wrap_btn_zoom {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    right: 8px;
-    z-index: 20;
-    height: 104px;
-    margin: auto;
-    width: auto;
-}
-.wrap_btn_zoom button {
-    display: block;
-    padding: 2px;
-    outline: none;
-}
-.wrap_btn_zoom .img_zoom {
-    display: block;
-    overflow: hidden;
-    font-size: 0;
-    line-height: 0;
-    background: url(//t1.daumcdn.net/localimg/localimages/07/2018/pc/detail/img_zoom.png)
-        no-repeat;
-    text-indent: -9999px;
-}
-.roughmap_lebel_text {
-    padding: 6px 8px 5px;
-    font-size: 12px;
-    line-height: 15px;
-    border-radius: 3px;
-    font-weight: 600;
-}
+
+/* -------------오시는 길 끝 ------------- */
 
 /* -------------팝업 부분 시작 ------------- */
 .popup-store {
-    /* visibility: hidden; */
     display: none;
     z-index: 110;
     position: fixed;
@@ -492,11 +504,69 @@ a {
     border-radius: 25px;
     background-color: #fff;
     padding: 35px;
+    overflow-y: auto;
+}
+.popup-store1 {
+    display: none;
+    z-index: 110;
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 95%;
+    max-width: 600px;
+    height: 770px;
+    box-sizing: border-box;
+    border-radius: 25px;
+    background-color: #fff;
+    padding: 35px;
+    overflow-y: auto;
+}
+.popup-store2 {
+    display: none;
+    z-index: 110;
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 95%;
+    max-width: 600px;
+    height: 770px;
+    box-sizing: border-box;
+    border-radius: 25px;
+    background-color: #fff;
+    padding: 35px;
+    overflow-y: auto;
+}
+.popup-store::-webkit-scrollbar {
+    display: none;
 }
 .popup-store .inner {
     height: 100%;
 }
 .popup-store .inner .popup-top {
+    position: relative;
+    box-sizing: border-box;
+    padding-bottom: 50px;
+}
+.popup-store1::-webkit-scrollbar {
+    display: none;
+}
+.popup-store1 .inner {
+    height: 100%;
+}
+.popup-store1 .inner .popup-top {
+    position: relative;
+    box-sizing: border-box;
+    padding-bottom: 50px;
+}
+.popup-store2::-webkit-scrollbar {
+    display: none;
+}
+.popup-store2 .inner {
+    height: 100%;
+}
+.popup-store2 .inner .popup-top {
     position: relative;
     box-sizing: border-box;
     padding-bottom: 50px;
@@ -578,6 +648,7 @@ a {
     box-sizing: border-box;
     padding-left: 10px;
     line-height: 130%;
+    /* font-size: 18px; */
 }
 .popup-content .textbox .etc-list li .right::before {
     content: "";
