--- a/css/store.css
+++ b/css/store.css
@@ -33,6 +33,10 @@ h2 {
     font-size: 26px;
     font-weight: 400;
 }
+.hidden {
+    position: fixed;
+    left: -100000px;
+}
 .top h2 {
     padding-top: 110px;
     font-size: 26px;
@@ -271,28 +275,47 @@ h6 {
     width: fit-content;
     cursor: pointer;
 }
-.btn-cate:checked .textbox {
+.btn-cate .check-input:checked + .textbox {
     background-color: #1c1c1c;
 }
 .btn-cate:hover .textbox {
     background-color: #1c1c1c;
 }
+
 .btn-cate:hover .textbox .ico.takeout {
+    background-image: url(/img/takeout-w.svg);
+}
+.btn-cate .check-input:checked + .textbox .ico.takeout {
     background-image: url(/img/takeout-w.svg);
 }
 .btn-cate:hover .textbox .ico.delivery {
     background-image: url(/img/delivery-w.svg);
 }
+.btn-cate .check-input:checked + .textbox .ico.delivery {
+    background-image: url(/img/delivery-w.svg);
+}
 .btn-cate:hover .textbox .ico.parking {
     background-image: url(/img/parking-w.svg);
 }
+.btn-cate .check-input:checked + .textbox .ico.parking {
+    background-image: url(/img/parking-w.svg);
+}
 .btn-cate:hover .textbox .ico.wifi {
+    background-image: url(/img/wifi-w.svg);
+}
+.btn-cate .check-input:checked + .textbox .ico.wifi {
     background-image: url(/img/wifi-w.svg);
 }
 .btn-cate:hover .textbox .text {
     color: #fff;
 }
 .btn-cate:hover .textbox .ico {
+    color: #fff;
+}
+.btn-cate .check-input:checked + .textbox .text {
+    color: #fff;
+}
+.btn-cate .check-input:checked + .textbox .ico {
     color: #fff;
 }
 .ico.takeout {
@@ -333,6 +356,7 @@ h6 {
     border-radius: 10px;
     border: 2px solid #1c1c1c;
     font-size: 16px;
+    transition: background-color 0.3s;
 }
 button {
     background-color: #fff;
@@ -636,7 +660,7 @@ a {
     width: 35px;
     height: 35px;
     font-size: 35px;
-    transition: color 0.3s;
+    /* transition: color 0.3s; */
 }
 .popup-store .inner .popup-content {
     height: calc(100% - 78px);
