--- a/css/store.css
+++ b/css/store.css
@@ -515,7 +515,8 @@ a {
 
 /* -------------팝업 부분 시작 ------------- */
 .popup-store {
-    display: none;
+    /* display: none; */
+    visibility: hidden;
     z-index: 110;
     position: fixed;
     left: 50%;
@@ -531,7 +532,7 @@ a {
     overflow-y: auto;
 }
 .popup-store1 {
-    display: none;
+    visibility: hidden;
     z-index: 110;
     position: fixed;
     left: 50%;
@@ -547,7 +548,7 @@ a {
     overflow-y: auto;
 }
 .popup-store2 {
-    display: none;
+    visibility: hidden;
     z-index: 110;
     position: fixed;
     left: 50%;
@@ -563,7 +564,7 @@ a {
     overflow-y: auto;
 }
 .popup-store3 {
-    display: none;
+    visibility: hidden;
     z-index: 110;
     position: fixed;
     left: 50%;
@@ -579,7 +580,7 @@ a {
     overflow-y: auto;
 }
 .popup-store4 {
-    display: none;
+    visibility: hidden;
     z-index: 110;
     position: fixed;
     left: 50%;
@@ -774,8 +775,8 @@ a {
 #map4,
 #map5,
 #map6 {
-    width: 530px;
-    height: 300px;
+    width: 100%;
+    height: 100%;
 }
 .popup-store1 .inner .mapbox,
 .popup-store2 .inner .mapbox,
